src/test/deca/syntax/invalid/test_dir/added/parser/while_without_brackets.deca
{
	while(1) println("Hello Moon !");
}
